# Google-Benchmark-Plotter

./: .gitignore  LICENSE  README.md
.github/workflows/: build_on_release.yml  cmake_windows_build.yml  cmake_windows_unit_tests.yml
BPlotter/: CMakeLists.txt  imgui.ini
BPlotter/src/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  pch.hpp
BPlotter/src/Resources/: ResourceManager.hpp  Resources.hpp
BPlotter/src/States/: State.cpp  State.hpp  StateStack.cpp  StateStack.hpp  States.hpp
BPlotter/src/States/CustomStates/: ExitApplicationState.cpp  ExitApplicationState.hpp  MainAppOpen.cpp  MainAppOpen.hpp
BPlotter/tests/: CMakeLists.txt
BPlotter/tests/mocks/: CMakeLists.txt
BenchmarkPlotter/: .gitignore  CMakeLists.txt  copy_file_if_not_exist.cmake
BenchmarkPlotter/src/: Application.cpp  Application.hpp  CMakeLists.txt  CMakeLists_Sources.txt  constants.hpp  main.cpp
BenchmarkPlotter/src/Resources/: ResourceManager.hpp  Resources.hpp
BenchmarkPlotter/src/States/: State.cpp  State.hpp  StateStack.cpp  StateStack.hpp  States.hpp
BenchmarkPlotter/src/States/CustomStates/: ExitApplicationState.cpp  ExitApplicationState.hpp  MainAppOpen.cpp  MainAppOpen.hpp
BenchmarkPlotter/src/Utils/: ImGuiLog.cpp
BenchmarkPlotter/tests/: CMakeLists.txt
